[tool.poetry]
name = "fastapi-cache2"
version = "0.2.1"
description = "Cache for FastAPI"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/fastapi-cache"
repository = "https://github.com/long2ice/fastapi-cache.git"
documentation = "https://github.com/long2ice/fastapi-cache"
keywords = ["fastapi", "cache", "caching"]
packages = [
    { include = "fastapi_cache" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
uvicorn = "*"
redis = { version = "^4.2.0rc1", optional = true }
aiomcache = { version = "*", optional = true }
pendulum = "*"
aiobotocore = { version = ">=1.4.1,<3.0.0", optional = true }
typing-extensions = { version = ">=4.1.0" }
importlib-metadata = {version = "^6.6.0", python = "<3.8"}

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
mypy = { version = "^1.2.0", python = "^3.10" }
pyright = { version = "^1.1.306", python = "^3.10" }
types-aiobotocore = { extras = ["dynamodb"], version = "^2.5.0.post2", python = "^3.10" }
types-redis = { version = "^4.5.4.2", python = "^3.10" }
ruff = { version = ">=0.0.267,<0.1.2", python = "^3.10" }

[tool.poetry.group.dev.dependencies]
pytest = "*"
requests = "*"
coverage = ">=6.5,<8.0"
httpx = "*"
tox = "^4.5.1"
towncrier = "^22.12.0"

[tool.poetry.group.distributing]
optional = true

[tool.poetry.group.distributing.dependencies]
twine = { version = "^4.0.2", python = "^3.10" }

[tool.poetry.extras]
redis = ["redis"]
memcache = ["aiomcache"]
dynamodb = ["aiobotocore"]
all = ["redis", "aiomcache", "aiobotocore"]

[tool.mypy]
files = ["."]
python_version = "3.7"
# equivalent of --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "examples.*.main"
ignore_errors = true

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "fastapi_cache"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/long2ice/fastapi-cache/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/long2ice/fastapi-cache/issues/{issue})"

[tool.pyright]
strict = ["fastapi_cache", "tests"]
pythonVersion = "3.7"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.ruff]
ignore = ["E501"]
line-length = 80
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
target-version = "py37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
